Fixing build issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib"]
 [dependencies]
 apple-bom = "0.3.0"
 hex = "0.4.3"
-pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
+pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
 
 [profile.release]
 lto = true
